--- a/style/main_page.css
+++ b/style/main_page.css
@@ -131,14 +131,11 @@ ul{
 }
 
 /* ✅ 1 карточка в ряд на мобильных */
-@media (max-width: 600px) {
+@media (max-width: 768px) { 
     .flow__card {
         flex: 1 1 100%;
-        max-width: 100%;
+        max-width: 450px;
     }
-}
-
-@media (max-width: 768px) { 
     .header .container {
         flex-direction: row; /* Размещаем элементы друг под другом */
         align-items: center;
@@ -152,6 +149,7 @@ ul{
 
     .header__nav {
         margin-top: 10px;
+        margin-right: 10px;
     }
 
     .header__list {
