--- a/style/main_page.css
+++ b/style/main_page.css
@@ -137,7 +137,7 @@ ul{
         max-width: 450px;
     }
     .header .container {
-        flex-direction: row; /* Размещаем элементы друг под другом */
+        flex-direction: row; /* Размещаем элементы в строку */
         align-items: center;
         padding: 10px 0;
     }
@@ -145,11 +145,12 @@ ul{
     .header__logo {
         width: 60px; /* Делаем логотип меньше */
         height: auto;
+        margin-left: 20px;
     }
 
     .header__nav {
         margin-top: 10px;
-        margin-right: 10px;
+        margin-right: 25px;
     }
 
     .header__list {
@@ -157,6 +158,6 @@ ul{
     }
 
     .header__list a {
-        font-size: 12px; /* Делаем шрифт меньше */
+        font-size: 14px; /* Делаем шрифт меньше */
     }
 }
